Getting Location Data was added.

--- a/ClimaApp/View/Base.lproj/Main.storyboard
+++ b/ClimaApp/View/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                                                 </constraints>
                                                 <color key="tintColor" systemColor="labelColor"/>
                                                 <state key="normal" backgroundImage="location.circle.fill" catalog="system"/>
+                                                <connections>
+                                                    <action selector="locationPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y8e-tW-jCz"/>
+                                                </connections>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="right" clearsOnBeginEditing="YES" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="1pw-dD-xS4" userLabel="Search Text Field">
                                                 <rect key="frame" x="55" y="0.0" width="264" height="40"/>
